--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@material-ui/icons": "^4.11.2",
     "next": "12.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-dropzone": "^12.0.4"
   },
   "devDependencies": {
     "eslint": "8.9.0",
