--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-dropzone": "^12.0.4"
+    "react-dropzone": "^12.0.4",
+    "react-material-ui-carousel": "^3.2.0"
   },
   "devDependencies": {
     "eslint": "8.9.0",
