--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.26.1",
     "bcrypt": "^5.0.1",
     "formik": "^2.2.9",
+    "mongodb": "3.5.9",
     "mongoose": "^6.2.7",
     "next": "12.1.0",
     "next-auth": "3.27.1",
