--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@material-ui/lab": "^4.0.0-alpha.60",
     "axios": "^0.26.1",
     "bcrypt": "^5.0.1",
+    "formidable-serverless": "^1.1.1",
     "formik": "^2.2.9",
     "mongodb": "3.5.9",
     "mongoose": "^6.2.7",
